Added Selenium webdriver to project

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/greasemonkey": "^4.0.0",
     "@types/jest": "^26.0.0",
     "@types/jsdom": "^16.2.3",
+    "@types/selenium-webdriver": "^4.0.9",
     "babel-jest": "^24.9.0",
     "common-tags": "^1.8.0",
     "jest": "^26.0.1",
+    "selenium-webdriver": "^4.0.0-alpha.7",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
