--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "build": "webpack",
     "test": "jest"
   },
-  "dependencies": {},
+  "dependencies": {
+    "local-storage": "^2.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
