--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^26.0.1",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "ts-loader": "^6.2.1",
+    "ts-mockito": "^2.6.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
