--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
         "sourceMap": true,
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
         "target": "es6",
         "module": "commonjs",
         "outDir": "out"
